# pyrecycletray

./: CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml
pyrecycletray/: __main__.py  __version__.py  custom_types.py  tray.py
pyrecycletray/resources/: constants.py  index.py
tests/: test_tray.py
