[tool.poetry]
name = "pyrecycletray"
version = "0.1.0"
description = "A simple tray icon which helps you bring the trash out"
authors = ["filippo.boido <filippo.boido@factoryautomation.info>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pystray = "^0.19.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
