[tool.poetry]
name = "pyrecycletray"
version = "0.2.0"
description = "A simple tray icon which helps you bring the trash out"
authors = ["filippo.boido <filippo.boido@factoryautomation.info>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pystray = "^0.19.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.982"
commitizen = "^2.35.0"

[tool.commitizen]
version = "0.2.0"
version_files = [
    "pyrecycletray/__version__.py"
]

[tool.poetry.scripts]
main = "pyrecycletray.__main__:main"
version = "pyrecycletray.__version__:print_version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
